tests/integration/errors/implicit_int_conversion.rsg
// TEST: compile_error
// EXPECT-ERROR: type mismatch

fn main() {
    var a: i32 = 10
    var b: i64 = 20
    var c: i64 = a + b
}
